--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ p {
     font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
+    text-align: center;
 
     transition: background .1s linear;
 }
@@ -152,6 +153,9 @@ p {
     background-color: #dd3434;
 }
 
+.btn--long {
+    min-width: 280px;
+}
 
 /* Features
 =========================*/
@@ -307,6 +311,10 @@ p {
     display: flex;
 }
 
+.social--footer {
+    justify-content: center;
+}
+
 .social__item {
     display: flex;
     justify-content: center;
@@ -329,12 +337,28 @@ p {
     fill: #000;
 }
 
+.social--footer .social__item {
+    background-color: transparent;
+    border-width: 2px;
+    border-color: #fff;
+    border-radius: 2px;
+}
+
+.social--footer .social__item:hover {
+    background-color: #fff;
+}
+
+
 .social__icon {
     display: block;
     height: 18px;
 
     fill: #c6cacc;
     transition: fill .1s linear;
+}
+
+.social--footer .social__icon {
+    fill: #fff;
 }
 
 
@@ -387,4 +411,97 @@ p {
     text-transform: uppercase;
     color: #fff;
 }
+
+
+
+/* Download
+=========================*/
+
+.download {
+    margin: 90px 0;
+
+    text-align: center;
+}
+
+.download__title {
+    margin-bottom: 10px;
+
+    font-size: 28px;
+    color: #2d3033;
+    font-weight: 300;
+}
+
+.download__text {
+    margin-bottom: 30px;
+
+    font-size: 13px;
+    color: #2d3033;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+
+/* Footer
+=========================*/
+
+
+.footer {
+    background-color: #3a3e64;
+}
+
+.footer__inner {
+    padding: 70px 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer__block {
+    width: 33.33333%;
+    padding: 0 15px;
+    text-align: center;
+}
+
+.footer__title {
+    margin-bottom: 10px;
+
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.footer__adress {
+    font-size: 14px;
+    line-height: 1.5;
+    font-style: normal;
+    color: rgba(255, 255, 255, .5)
+}
+
+.footer__text {
+    font-size: 14px;
+    line-height: 1.5;
+    color: rgba(255, 255, 255, .5)
+}
+
+/* Copyright
+=========================*/
+
+.copyright {
+    padding: 20px 0;
+    background-color: #313454;
+}
+
+.copyright__text {
+    text-align: center;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #808080;
+}
+
+.copyright__text span {
+    color: #fff;
+}
+
+
+
 
